Website merged progress

--- a/templates/AboutThem.html
+++ b/templates/AboutThem.html
@@ -62,7 +62,7 @@ About Them
         <div class="col-md-12">
             <a href="{{ url_for('Breeds') }}" class="card-link">
                 <div class="card">
-                    <h4 class="card-title">Breeds</h4>
+                    <h4 class="card-title">Under Construction: Breeds</h4>
                     <div class="card-body">
                         <p>Discover various breeds of pets, their characteristics, and considerations for choosing the
                             right one for you.</p>
@@ -85,10 +85,10 @@ About Them
         <div class="col-md-12">
             <a href="{{ url_for('ItemsandToys') }}" class="card-link">
                 <div class="card">
-                    <h4 class="card-title">Items & Toys</h4>
+                    <h4 class="card-title">Under Construction: Items & Toys</h4>
                     <div class="card-body">
-                        <p>Explore a collection of pet accessories, toys, and essential items for a happy and healthy
-                            pet lifestyle.</p>
+                        <p>Explore a collection of DIY accessories, toys, and essential items for a happy and healthy
+                            bunny lifestyle.</p>
                     </div>
                     <div class="card-footer"> Explore <span class="fas fa-arrow-right"></span></div>
                 </div>
