--- a/templates/layout.html
+++ b/templates/layout.html
@@ -68,16 +68,16 @@
               <li><a class="dropdown-item" href="{{ url_for('AboutThem') }}">Menu</a></li>
               <hr class="dropdown-divider">
               <hr class="dropdown-divider">
-              <li><a class="dropdown-item" href="#">Food & Nutrition</a></li>
-              <li><a class="dropdown-item" href="#">Health & Care</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('FoodandNutrition') }}">Food & Nutrition</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('HealthandCare') }}">Health & Care</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="#">Breeds</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('Breeds') }}">Breeds</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="#">Items & Toys</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('ItemsandToys') }}">Items & Toys</a></li>
             </ul>
           </li>
           <li class="nav-item">
