--- a/templates/AboutThem/FoodandNutrition.html
+++ b/templates/AboutThem/FoodandNutrition.html
@@ -87,7 +87,7 @@ data-bs-spy="scroll" data-bs-target="#list-org" data-bs-offset="0"
         </div>
     </div>
 
-    <video autoplay loop muted>
+    <video autoplay playsinline loop muted>
         <source src="{{ url_for('static', filename='img/BunnyEating.mp4') }}" type="video/mp4">
     </video>
 </div>
