--- a/templates/AboutThem/Breeds.html
+++ b/templates/AboutThem/Breeds.html
@@ -31,7 +31,7 @@ data-bs-spy="scroll" data-bs-target="#list-org" data-bs-offset="0"
         </div>
       </div>
     </div>
-    <video autoplay playsinline loop muted>
+    <video playsinline muted autoplay loop poster>
         <source src="{{ url_for('static', filename='img/BunnyBreeds.mp4') }}" type="video/mp4">
     </video> 
 </div>
