--- a/templates/AboutThem/HealthandCare.html
+++ b/templates/AboutThem/HealthandCare.html
@@ -79,7 +79,7 @@ data-bs-spy="scroll" data-bs-target="#list-org" data-bs-offset="0"
             </div>
         </div>
     </div>
-    <video autoplay loop playsinline muted>
+    <video playsinline muted autoplay loop poster>
         <source src="{{ url_for('static', filename='img/BunnyHealth.mp4') }}" type="video/mp4">
     </video>
 </div>
@@ -152,7 +152,7 @@ data-bs-spy="scroll" data-bs-target="#list-org" data-bs-offset="0"
             </div>
         </div>
     </div>
-    <video autoplay playsinline loop muted>
+    <video playsinline muted autoplay loop poster>
         <source src="{{ url_for('static', filename='img/BunnyHealth2.mp4') }}" type="video/mp4">
     </video>
 </div>
