--- a/templates/AboutThem/Breeds.html
+++ b/templates/AboutThem/Breeds.html
@@ -32,7 +32,7 @@ data-bs-spy="scroll" data-bs-target="#list-org" data-bs-offset="0"
       </div>
     </div>
     <video playsinline muted autoplay loop poster>
-        <source src="{{ url_for('static', filename='img/BunnyBreeds.mp4') }}" type="video/mp4">
+        <source src="{{ url_for('static', filename='img/BunnyBreedssmall.webm') }}" type="video/webm">
     </video> 
 </div>
       <br>
