--- a/templates/AboutThem/ItemsandToys.html
+++ b/templates/AboutThem/ItemsandToys.html
@@ -33,7 +33,7 @@ data-bs-spy="scroll" data-bs-target="#list-org" data-bs-offset="0"
       </div>
     </div>
     <video playsinline muted autoplay loop poster>
-        <source src="{{ url_for('static', filename='img/BunnyPlayingsmall.mp4') }}" type="video/mp4">
+        <source src="{{ url_for('static', filename='img/BunnyPlayingsmall.webm') }}" type="video/webm">
     </video> 
 </div>
       <br>
